//
// Copyright (C) 2019-2021 vdaas.org vald team <vald@vdaas.org>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package vald.v1;

option go_package = "github.com/vdaas/vald/apis/grpc/v1/gateway/vald";
option java_multiple_files = true;
option java_package = "org.vdaas.vald.api.v1.gateway.vald";
option java_outer_classname = "ValdApi";

import "apis/proto/v1/payload/payload.proto";
import "google/api/annotations.proto";


service Vald {

  rpc Exists(payload.v1.Object.ID) returns (payload.v1.Object.ID) {
    option (google.api.http).get = "/exists/{id}";
  }

  rpc Search(payload.v1.Search.Request) returns (payload.v1.Search.Response) {
    option (google.api.http) = {
      post : "/search"
      body : "*"
    };
  }
  rpc SearchByID(payload.v1.Search.IDRequest) returns (payload.v1.Search.Response) {
    option (google.api.http) = {
      post : "/search/id"
      body : "*"
    };
  }
  rpc StreamSearch(stream payload.v1.Search.Request)
      returns (stream payload.v1.Search.Response) {}
  rpc StreamSearchByID(stream payload.v1.Search.IDRequest)
      returns (stream payload.v1.Search.Response) {}

  rpc Insert(payload.v1.Object.Vector) returns (payload.v1.Object.Location) {
    option (google.api.http) = {
      post : "/insert"
      body : "*"
    };

  }
  rpc StreamInsert(stream payload.v1.Object.Vector)
      returns (stream payload.v1.Object.Location) {}
  rpc MultiInsert(payload.v1.Object.Vectors) returns (payload.v1.Object.Locations) {}

  rpc Update(payload.v1.Object.Vector) returns (payload.v1.Object.Location) {
    option (google.api.http) = {
      post : "/update"
      body : "*"
    };

  }
  rpc StreamUpdate(stream payload.v1.Object.Vector)
      returns (stream payload.v1.Object.Location) {}
  rpc MultiUpdate(payload.v1.Object.Vectors) returns (payload.v1.Object.Locations) {}

  rpc Upsert(payload.v1.Object.Vector) returns (payload.v1.Object.Location) {
    option (google.api.http) = {
      post : "/upsert"
      body : "*"
    };

  }
  rpc StreamUpsert(stream payload.v1.Object.Vector)
      returns (stream payload.v1.Object.Location) {}
  rpc MultiUpsert(payload.v1.Object.Vectors) returns (payload.v1.Object.Locations) {}

  rpc Remove(payload.v1.Object.ID) returns (payload.v1.Object.Location) {
    option (google.api.http).delete = "/remove/{id}";

  }
  rpc StreamRemove(stream payload.v1.Object.ID) 
      returns (stream payload.v1.Object.Location) {}
  rpc MultiRemove(payload.v1.Object.IDs) returns (payload.v1.Object.Locations) {}

  rpc GetObject(payload.v1.Object.ID) returns (payload.v1.Object.Vector) {
    option (google.api.http).get = "/object/{id}";
  }
  rpc StreamGetObject(stream payload.v1.Object.ID)
      returns (stream payload.v1.Object.Vector) {}
}
